MDEV-37686 rpl.create_or_replace_mix2 fails in MDEV-35915 branch

Related to:
MDEV-35915 Implement Global temporary tables