sql/sql_class.h
@@ -6294,6 +6294,7 @@ class start_new_trans
   uint in_sub_stmt;
   uint server_status;
   my_bool wsrep_on;
+  rpl_group_info* org_rgi_slave;
 
 public:
   start_new_trans(THD *thd);
